modification du texte des menus en cours

--- a/note.html
+++ b/note.html
@@ -49,30 +49,55 @@
                     Entrées
                 </p>
                 <div class="food-item">
-                    <p class="marge1">Ravioles de foie gras</p>
-                    <p class="marge2">Accompagnées de leur crème à la truffe</p>
-                    <div class="price">25 €</div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Caviar osciètre</p>
-                    <p class="marge2">Sur blini à la farine de blé noir</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Homard et espuma de potiron</p>
-                    <p class="marge2">Marinés aux zestes d'orange</p>
-                    <div class="price">20 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Foie gras de canard cuit entier</p>
-                    <p class="marge2">Confiture de figue et pain toasté</p>
-                    <div class="price">35 €</div>
-                </div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="plats">
@@ -80,52 +105,88 @@
                     PLATS
                 </p>
                 <div class="food-item">
-                    <p class="marge1">Noix de coquilles Saint-Jacques</p>
-                    <p class="marge2">Sur lit de purée de céleri-rave</p>
-                    <div class="price">40 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Langoustine poêlée</p>
-                    <p class="marge2">Purée de patate douce</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-
-                    <p class="marge1">Mijoté de queue de boeuf</p>
-                    <p class="marge2"> Et riz sauvage aux zestes de citron</p>
-                    <div class="price">45 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
-            </div>
+
             <div class="desserts">
                 <p class="upper">
                     DESSERTS
                 </p>
 
-                <div class="food-item">
-                    <p class="marge1">Macaron noisette et chocolat</p>
-                    <p class="marge2">Glace au caramel brun et sel de Guérande</p>
-                    <div class="price">18 €</div>
-
+                    <div class="food-item">
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Baba au rhum revisité</p>
-                    <p class="marge2">Avec son coulis de citron</p>
-                    <div class="price">22 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Tarte au citron meringuée</p>
-                    <p class="marge2">Déstructurée</p>
-                    <div class="price">23 €</div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
-                </div>
+                
             <div class="button">Commander</div>
 
 
