--- a/palette.html
+++ b/palette.html
@@ -47,51 +47,86 @@
                     Entrées
                 </p>
                 <div class="food-item">
-                    <p class="marge1">Fricassée d'escargots</p>
-                    <p class="marge2">Au piment d'Espelette</p>
-                    <div class="price">25 €</div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Foie gras de canard mi-cuit</p>
-                    <p class="marge2">Et ses copeaux de truffe noire</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Oeuf au plat</p>
-                    <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
-                    <div class="price">20 €</div>
-
-                </div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="plats">
                 <p class="upper">
                     PLATS
                 </p>
-                <div class="food-item">
-                    <p class="marge1">Filete de boeuf aux herbes</p>
-                    <p class="marge2">Accompagné de sa ribambelle de légumes</p>
-                    <div class="price">40 €</div>
 
+                   <div class="food-item">
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Parmentier de queue de boeuf</p>
-                    <p class="marge2">A la truffe noire sur sa purée de panais</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-
-                    <p class="marge1">Filet de turbot</p>
-                    <p class="marge2">Aux agrumes</p>
-                        <div class="price">44 €</div>
-
-                </div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="desserts">
@@ -100,27 +135,43 @@
                 </p>
 
                 <div class="food-item">
-                    <p class="marge1">Paris-Brest</p>
-                    <p class="marge2">Revisité</p>
-                    <div class="price">18 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Macaron au chocolat d'exception</p>
-                    <p class="marge2">Et glace à la vanille de Madagascar</p>
-                    <div class="price">22 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Mousse au chocolat</p>
-                    <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
-                    <div class="price">23 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            </div>
 
             <div class="button">Commander</div>
 
