--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -30,8 +30,11 @@
         <section>
             <div class="menu">
             <div class="flex">
-                <h1 class="title-restau"> A la française</h1>
-               <div> <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+               <div cla> <h1 class="title-restau"> A la française </h1>
+                <div class="heart-btn heart-btn--accent">
+                    <i class="heart-btn__empty fa-regular fa-heart"></i>
+                    <i class="heart-btn__filled fa-solid fa-heart"></i>
+                </div>   
             </div>
                <div class="loader-container">
                 <div class="dot d1"></div>
