--- a/delice.html
+++ b/delice.html
@@ -51,24 +51,42 @@
                     Entrées
                 </p>
                 <div class="food-item">
-                    <p class="marge1">Tartare de thon</p>
-                    <p class="marge2">Assaisonné au yuzu</p>
-                    <div class="price">25 €</div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Bouchée de homard croustillant</p>
-                    <p class="marge2">Et sa farandole de petitis légumes</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Poulet rôti aux herbes de Provence</p>
-                    <p class="marge2">Et sa crème de truffe</p>
-                    <div class="price">40 €</div>
-
-                </div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="plats">
@@ -76,26 +94,42 @@
                     PLATS
                 </p>
                 <div class="food-item">
-                    <p class="marge1">Poulet rôti aux herbes de Provence</p>
-                    <p class="marge2">Et sa crème de truffe</p>
-                    <div class="price">40 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Langouste rôtie</p>
-                    <p class="marge2">Et ses légumes de saison</p>
-                    <div class="price">35 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-
-                    <p class="marge1">Côte de boeuf Angus</p>
-                    <p class="marge2">Et sa purée de panais</p>
-                    <div class="price">44 €</div>
-
-                </div>
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="desserts">
@@ -104,26 +138,44 @@
                 </p>
 
                 <div class="food-item">
-                    <p class="marge1">Oeuf au plat</p>
-                    <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
-                    <div class="price">76 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Crème brulée</p>
-                    <p class="marge2">Revisitée</p>
-                    <div class="price">22 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="food-item">
-                    <p class="marge1">Tiramisu</p>
-                    <p class="marge2">A la noisette</p>
-                    <div class="price">23 €</div>
-
+                    <div>
+                        <p class="marge1">Tartare de poulpe acidulé</p>
+                        <p class="marge2">Aux zestes d'orange</p>
+                    </div>
+                    <div class="price-check-container">
+                        <div class="price">25 €</div>
+                        <div class="check">
+                            <i class="far fa-check-circle fa-lg"></i>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                
             <div class="button">Commander</div>
 
 
