projet quasiment terminé, reste à corriger le check et régler le responsive heart

--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -176,7 +176,7 @@
         </div>
 
 
-        </section>
+    </div>
     </main>
            <!-- FOOTER -->
            <footer class="flex-desktop">
