--- a/delice.html
+++ b/delice.html
@@ -35,10 +35,14 @@
             <div class="dot d2"></div>
             <div class="dot d3"></div>
         </div>
-        <section class="menu">
+        <div class="menu">
             <div class="flex">
-                <h1 class="title-restau"> Le délice des sens</h1>
-                <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+               <div class="header-container"> <h1 class="title-restau"> Délice des sens</h1>
+                <div class="heart-btn heart-btn--accent">
+                    <i class="heart-btn__empty fa-regular fa-heart"></i>
+                    <i class="heart-btn__filled fa-solid fa-heart"></i>
+                </div>
+               </div>
                 <div class="loader-container">
                     <div class="dot d1"></div>
                     <div class="dot d2"></div>
