--- a/note.html
+++ b/note.html
@@ -31,11 +31,15 @@
     </header>
     
     <main>
-        <section class="menu">
-
+        <div class="menu">
             <div class="flex">
-                <h1 class="title-restau"> La note enchantée</h1>
-                <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+               <div class="header-container"> <h1 class="title-restau"> La note enchantée</h1>
+                <div class="heart-btn heart-btn--accent">
+                    <i class="heart-btn__empty fa-regular fa-heart"></i>
+                    <i class="heart-btn__filled fa-solid fa-heart"></i>
+                </div>
+               </div>
+            </div>
                 <div class="loader-container">
                     <div class="dot d1"></div>
                     <div class="dot d2"></div>
@@ -190,7 +194,7 @@
             <div class="button">Commander</div>
 
 
-        </section>
+            </div>
     </main>
                <!-- FOOTER -->
                <footer class="flex-desktop">
