--- a/palette.html
+++ b/palette.html
@@ -29,12 +29,14 @@
     </div>
     </header>
     <main>
-        <section class="menu">
-            <div class="menu-desktop">
-
+        <div class="menu">
             <div class="flex">
-                <h1 class="title-restau"> La palette du goût</h1>
-                <i class="fa-regular fa-heart fa-xl fa-xl2"></i>
+               <div class="header-container"> <h1 class="title-restau"> La palette du goût</h1>
+                <div class="heart-btn heart-btn--accent">
+                    <i class="heart-btn__empty fa-regular fa-heart"></i>
+                    <i class="heart-btn__filled fa-solid fa-heart"></i>
+                </div>
+               </div>
                 <div class="loader-container">
                     <div class="dot d1"></div>
                     <div class="dot d2"></div>
