--- a/note.html
+++ b/note.html
@@ -32,6 +32,11 @@
     
     <main>
         <div class="menu">
+                <div class="loader-container">
+                <div class="dot d1"></div>
+                <div class="dot d2"></div>
+                <div class="dot d3"></div>
+            </div>
             <div class="flex">
                <div class="header-container"> <h1 class="title-restau"> La note enchantée</h1>
                 <div class="heart-btn heart-btn--accent">
@@ -39,13 +44,7 @@
                     <i class="heart-btn__filled fa-solid fa-heart"></i>
                 </div>
             </div>
-                <div class="loader-container">
-                    <div class="dot d1"></div>
-                    <div class="dot d2"></div>
-                    <div class="dot d3"></div>
-                </div>
             </div>
-
             <div class="entr">
                 
                 <p class="upper">
@@ -53,8 +52,8 @@
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Ravioles de foie gras</p>
+                        <p class="marge2">Accompagnées de leur crème à la truffe</p>
                     </div>
                     <div class="price-check-container">
                         <div class="price">25 €</div>
@@ -66,11 +65,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Caviar osciètre</p>
+                        <p class="marge2">Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">30 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -79,11 +78,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Homard et espuma de potiron</p>
+                        <p class="marge2">Marinés aux zestes d'orange</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">20 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -92,11 +91,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Foie gras de canard cuit entier</p>
+                        <p class="marge2">Confiture de figue et pain toasté</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -109,11 +108,11 @@
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Noix de coquilles Saint-Jacques</p>
+                        <p class="marge2">Sur lit de purée de céleri-rave</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">40 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -122,11 +121,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Langoustine poêlée</p>
+                        <p class="marge2">Purée de patate douce</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -135,11 +134,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Mijoté de queue de boeuf</p>
+                        <p class="marge2">Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">45 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -153,11 +152,11 @@
 
                     <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Macaron noisette et chocolat</p>
+                        <p class="marge2">Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">18 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -166,11 +165,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Baba au rhum revisité</p>
+                        <p class="marge2">Avec son coulis de citron</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">22 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -179,11 +178,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Tarte au citron meringuée</p>
+                        <p class="marge2">Destructurée</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">23 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
