--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -30,7 +30,8 @@
         <section>
             <div class="menu">
             <div class="flex">
-               <div class="header-container"> <h1 class="title-restau"> A la française </h1>
+               <div class="header-container">
+                <div class="title"> <h1 class="title-restau"> A la francaise</h1></div>
                 <div class="heart-btn heart-btn--accent">
                     <i class="heart-btn__empty fa-regular fa-heart"></i>
                     <i class="heart-btn__filled fa-solid fa-heart"></i>
@@ -61,11 +62,11 @@
                 </div>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Velouté de légumes d'antan</p>
+                        <p class="marge2">Carotte, panais, topinambour</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -74,11 +75,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Soupe à l'oignon</p>
+                        <p class="marge2">Revisitée</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">20 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -90,11 +91,11 @@
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Coquilles Saint-Jacques</p>
+                        <p class="marge2">Accompagnées d'une purée de panais</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">40 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -103,11 +104,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Magret de canard</p>
+                        <p class="marge2">Et parmentier de pommes de terre</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -116,11 +117,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Pigeonneau d'Ille-et-Vilaine</p>
+                        <p class="marge2">Sur son lit gnocchis aux légumes</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">44 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -134,11 +135,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Pétales de violettes glacés</p>
+                        <p class="marge2">Et purée de noisettes</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">18 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -147,11 +148,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Fondant au chocolat</p>
+                        <p class="marge2">Revisité</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">22 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -160,11 +161,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Millefeuille croustillant</p>
+                        <p class="marge2">Myrtilles et pâte d'amande</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">23 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
