--- a/delice.html
+++ b/delice.html
@@ -56,8 +56,8 @@
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Tartare de thon/p>
+                        <p class="marge2">Assaisonné au yuzu</p>
                     </div>
                     <div class="price-check-container">
                         <div class="price">25 €</div>
@@ -69,11 +69,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Bouchée de homard croustillant</p>
+                        <p class="marge2">Et sa farandole de petits légumes</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -82,11 +82,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Poulet rôti aux herbes de Provence</p>
+                        <p class="marge2">Et sa crème de truffe</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">40 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -99,11 +99,11 @@
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Poulet rôti aux herbes de Provence</p>
+                        <p class="marge2">Et sa crème de truffe</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">40 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -112,11 +112,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Langouste rôtie</p>
+                        <p class="marge2">Et ses légumes de saison</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -125,11 +125,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Côte de boeuf Angus</p>
+                        <p class="marge2">Et sa purée de panais</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">44 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -143,11 +143,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Oeuf au plat</p>
+                        <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">76 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -156,11 +156,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Crème brulée</p>
+                        <p class="marge2">Revisitée</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">22 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -169,11 +169,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Tiramisu</p>
+                        <p class="marge2">A la noisette</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">23 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
