--- a/palette.html
+++ b/palette.html
@@ -50,8 +50,8 @@
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Fricassée d'escargots</p>
+                        <p class="marge2">Au piment d'Espelette</p>
                     </div>
                     <div class="price-check-container">
                         <div class="price">25 €</div>
@@ -63,11 +63,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Foie gras de canard mi-cuit</p>
+                        <p class="marge2">Et ses copeaux de truffe noire</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -76,11 +76,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Oeuf au plat</p>
+                        <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">20 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -94,11 +94,11 @@
 
                    <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Filet de boeuf aux herbes</p>
+                        <p class="marge2">Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">40 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -107,11 +107,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Parmentier de queue de boeuf</p>
+                        <p class="marge2">A la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">35 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -120,11 +120,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Filet de turbot</p>
+                        <p class="marge2">Aux agrumes</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">44 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -138,11 +138,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Paris-Brest</p>
+                        <p class="marge2">Revisité</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">18 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -151,11 +151,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Macaron au chocolat d'exception</p>
+                        <p class="marge2">Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">22 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
@@ -164,11 +164,11 @@
 
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de poulpe acidulé</p>
-                        <p class="marge2">Aux zestes d'orange</p>
+                        <p class="marge1">Mousse au chocolat</p>
+                        <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">25 €</div>
+                        <div class="price">23 €</div>
                         <div class="check">
                             <i class="far fa-check-circle fa-lg"></i>
                         </div>
