--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -27,8 +27,15 @@
     </header>
     <main>
 
-        <section>
+        <div>
             <div class="menu">
+                <div class="loader-wrapper">
+                    <div class="loader-container">
+                      <div class="dot d1"></div>
+                      <div class="dot d2"></div>
+                      <div class="dot d3"></div>
+                    </div>
+                  </div>
             <div class="flex">
                <div class="header-container">
                 <div class="title"> <h1 class="title-restau"> A la francaise</h1></div>
@@ -37,11 +44,6 @@
                     <i class="heart-btn__filled fa-solid fa-heart"></i>
                 </div>
             </div>
-            </div>
-            <div class="loader-container">
-                <div class="dot d1"></div>
-                <div class="dot d2"></div>
-                <div class="dot d3"></div>
             </div>
 
             <div class="entr">
