--- a/palette.html
+++ b/palette.html
@@ -30,19 +30,23 @@
     </header>
     <main>
         <div class="menu">
-            <div class="flex">
-               <div class="header-container"> <h1 class="title-restau"> La palette du goût</h1>
-                <div class="heart-btn heart-btn--accent">
-                    <i class="heart-btn__empty fa-regular fa-heart"></i>
-                    <i class="heart-btn__filled fa-solid fa-heart"></i>
-                </div>
-               </div>
+            <div class="loader-wrapper">
                 <div class="loader-container">
-                    <div class="dot d1"></div>
-                    <div class="dot d2"></div>
-                    <div class="dot d3"></div>
+                  <div class="dot d1"></div>
+                  <div class="dot d2"></div>
+                  <div class="dot d3"></div>
                 </div>
-            </div>
+              </div>
+              <div class="flex">
+                <div class="header-container">
+                 <div class="title"> <h1 class="title-restau"> La palette du goût</h1></div>
+                 <div class="heart-btn heart-btn--accent">
+                     <i class="heart-btn__empty fa-regular fa-heart"></i>
+                     <i class="heart-btn__filled fa-solid fa-heart"></i>
+                 </div>
+             </div>
+             </div>
+            
 
             <div class="entr">
                 <p class="upper">
@@ -178,7 +182,7 @@
             <div class="button">Commander</div>
 
 
-        </section>
+            </div>
     </main>
                <!-- FOOTER -->
                <footer class="flex-desktop">
