--- a/delice.html
+++ b/delice.html
@@ -30,12 +30,14 @@
     </div>
     </header>
     <main>
-        <div class="loader-container">
-            <div class="dot d1"></div>
-            <div class="dot d2"></div>
-            <div class="dot d3"></div>
-        </div>
         <div class="menu">
+            <div class="loader-wrapper">
+                <div class="loader-container">
+                  <div class="dot d1"></div>
+                  <div class="dot d2"></div>
+                  <div class="dot d3"></div>
+                </div>
+              </div>
             <div class="flex">
                <div class="header-container"> <h1 class="title-restau"> Délice des sens</h1>
                 <div class="heart-btn heart-btn--accent">
@@ -43,20 +45,14 @@
                     <i class="heart-btn__filled fa-solid fa-heart"></i>
                 </div>
                </div>
-                <div class="loader-container">
-                    <div class="dot d1"></div>
-                    <div class="dot d2"></div>
-                    <div class="dot d3"></div>
-                </div>
             </div>
-
             <div class="entr">
                 <p class="upper">
                     Entrées
                 </p>
                 <div class="food-item">
                     <div>
-                        <p class="marge1">Tartare de thon/p>
+                        <p class="marge1">Tartare de thon</p>
                         <p class="marge2">Assaisonné au yuzu</p>
                     </div>
                     <div class="price-check-container">
@@ -183,7 +179,7 @@
             <div class="button">Commander</div>
 
 
-        </section>
+            </div>
     </main>
                <!-- FOOTER -->
                <footer class="flex-desktop">
