--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 	<body>
 		<div class="container">
-			<div class="loader-container">
-				<div class="dot d1"></div>
-				<div class="dot d2"></div>
-				<div class="dot d3"></div>
-			</div>
+            <div class="loader-wrapper">
+                <div class="loader-container">
+                  <div class="dot d1"></div>
+                  <div class="dot d2"></div>
+                  <div class="dot d3"></div>
+                </div>
+              </div>
 			<header>
 				<!-- LOGO -->
 				<div class="bloc-logo"><img src="images/logo/ohmyfood@2x.svg" alt=""></div>
